--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,8 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
-  "scope": ".",
+  "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#1c2833",
   "background_color": "#1c2833"
