--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,6 +16,11 @@
       "src": "logo-timer-512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "apple-icon-180x180.png",
+      "type": "image/png",
+      "sizes": "180x180"
     }
   ],
   "start_url": "./index.html",
