--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     },
     {
-      "src": "apple-icon-180x180.png",
+      "src": "apple-touch-icon-180x180.png",
       "type": "image/png",
       "sizes": "180x180"
     }
